# instrumentation-benchmark

./: .gitignore  CMakeLists.txt  README.md
cmake/: .gitignore  README.md
cmake/Modules/: BuildSettings.cmake  ClangFormat.cmake  Compilers.cmake  MacroUtilities.cmake
cmake/Templates/: __init__.py
examples/: execute.py  execute.sh
examples/timemory/: UserSettings.cmake  caliper_process_scope.h  caliper_thread_scope.h  configure.sh  execute_analysis.sh  tau_marker.h  timemory_analysis.hpp  timemory_c_enum_library.h  timemory_cxx_bundle.hpp  timemory_cxx_get_library.hpp  timemory_cxx_ptr_library.hpp  timemory_cxx_templates.hpp  timemory_cxx_templates_pointer.hpp
include/: fallback_inst.h  instrumentation.h  instrumentation.hpp
include/fallback/: instrumentation.h  instrumentation.hpp
include/user/: .gitignore  README.md
instrument_benchmark/: __init__.py.in
source/: fibonacci.c  fibonacci.cpp  matmul.c  matmul.cpp
source/python/: libinstrument_benchmark.cpp
